added ratio color 💅

--- a/src/newtab/scss/_colors.scss
+++ b/src/newtab/scss/_colors.scss
@@ -1,5 +1,5 @@
 $white: #fff;
 $lightgrey: #FAFBFD;
-$grey: #CCD0D9;
-$darkgrey: #2C3135;
+$grey: #CCD0D9; // disabled links
+$darkgrey: #AAB2BD; // inactive links
 $black: #000;
