added overview menu fundament

--- a/src/newtab/scss/_colors.scss
+++ b/src/newtab/scss/_colors.scss
@@ -1,5 +1,6 @@
 $white: #fff;
-$lightgrey: #FAFBFD;
-$grey: #CCD0D9; // disabled links
+$lightgrey: #e6e9ee;
 $darkgrey: #AAB2BD; // inactive links
 $black: #000;
+
+$primary: #F5BA4F;
