--- a/src/newtab/scss/_colors.scss
+++ b/src/newtab/scss/_colors.scss
@@ -1,6 +1,6 @@
 $white: #fff;
 $lightgrey: #EDEFF3;
-$darkgrey: #AAB2BD; // inactive links
+$darkgrey: #AAB2BD;
 $black: #000;
 
 $primary: #F5BA4F;
